--- a/style.css
+++ b/style.css
@@ -1,40 +1,122 @@
-.contianer {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    background: #e33f3f;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-}
 body {
     font-family: 'Quicksand', sans-serif;
-    background: #000000;
+    background-image: url("images/photo_2025-07-14_20-16-14.jpg");
     color: #ffffff;
     display: flex;
+    padding: 50px;
     justify-content: center;
+}
+
+.container {
+    max-width: 600px;
+    padding: 20px 30px;
+    background: #000000;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    border: 3px solid #36f449;
+    text-align: center;
 }
 
 input[type="text"] {
     flex: 1;
-    padding: 10px;
-    border: 1px solid #ccc;
+    padding: 10px;    
     border-radius: 4px;
     font-size: 16px;
+    align-items: center;
+    outline: none;
+    
 }
-
-#plus-button {
-    font-size: 24px;
+.input-group {
+    align-items: center;
+    display: flex;    
+    margin-top: 20px;
+}
+/*-------------------- add task button --------------*/
+#plus-btn {
+    margin-left: 10px;
+    font-size: 40px;
     width: 50px;
     height: 50px;
-    border: none;
     border-radius: 50%;
-    background-color: #4CAF50;
+    background-color: #36f449;
     color: white;
-    cursor: pointer;
     box-shadow: 0 2px 5px rgba(0,0,0,0.2);
     transition: background-color 0.3s ease;
 }
 
-#plus-button:hover {
-    background-color: #45a049;
+/* --------------------task input-------------*/
+#taskInput {
+    flex-grow: 1;
+    padding: 10px;
+    font-size: 16px;
+    border-radius: 4px;
+    border: 2px solid #178923;
+    outline: none;
+    color: #ffffff;
+    background-color: #000000;
+}
+
+/* -------------- edit and delete btn -------------- */
+#plus-btn:hover {
+    background-color: #52a741;
+}
+
+#task-list .editbtn {
+  color: #dc9325;
+  background: none;
+  border: none;
+  padding-left: 100px;
+  cursor: pointer;
+}
+
+#task-list .editbtn i:hover {
+  color: rgb(117, 66, 4);
+}
+
+#task-list .deletebtn {
+  color: #fa1919;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+#task-list .deletebtn i:hover {
+  color: #8d0505;
+}
+
+
+#task-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+   
+}
+
+li {   
+    padding: 10px;    
+    font-size: 16px;
+    border-radius: 4px;
+    margin-bottom: 10px;   
+    border: 0.5px solid #023a07;
+    align-items: center;
+    justify-content: space-between;
+    display: flex;
+    
+}
+li span.checked {
+  text-decoration: line-through; 
+}
+
+li:hover {
+    background-color: #011301;
+    cursor: pointer;
+}
+
+span {
+    flex-grow: 1;
+    margin-right: 10px;
+    color: #36f449;
+    font-size: 30px;
+    font-weight: bold;
+    font-family: 'Poppins', sans-serif;
 }
